tests/algorithms/x/C/graphs/connected_components.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c: In function ‘dfs’:
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:141:40: error: ‘graph_keys’ undeclared (first use in this function)
  141 |         long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, vert, NULL);
      |                                        ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:141:40: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:141:52: error: ‘graph_vals’ undeclared (first use in this function)
  141 |         long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, vert, NULL);
      |                                                    ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:141:64: error: ‘graph_lens’ undeclared (first use in this function)
  141 |         long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, vert, NULL);
      |                                                                ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:141:76: error: ‘graph_len’ undeclared (first use in this function)
  141 |         long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, vert, NULL);
      |                                                                            ^~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:152:29: warning: implicit declaration of function ‘concat’ [-Wimplicit-function-declaration]
  152 |         long long* __ret3 = concat(({long long *tmp = malloc(1 * sizeof(long long)); tmp[0] = vert; tmp;}), connected_verts);
      |                             ^~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:152:29: warning: initialization of ‘long long int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c: In function ‘connected_components’:
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:159:28: error: ‘graph_len’ undeclared (first use in this function)
  159 |     long long graph_size = graph_len;
      |                            ^~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c: In function ‘main’:
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:47: error: initializer element is not constant
  191 |         static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
      |                                               ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:47: note: (near initialization for ‘test_graph_1_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:68: error: initializer element is not constant
  191 |         static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
      |                                                                    ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:68: note: (near initialization for ‘test_graph_1_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:89: error: initializer element is not constant
  191 |         static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
      |                                                                                         ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:89: note: (near initialization for ‘test_graph_1_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:110: error: initializer element is not constant
  191 |         static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
      |                                                                                                              ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:110: note: (near initialization for ‘test_graph_1_vals[3]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:131: error: initializer element is not constant
  191 |         static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
      |                                                                                                                                   ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:131: note: (near initialization for ‘test_graph_1_vals[4]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:152: error: initializer element is not constant
  191 |         static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
      |                                                                                                                                                        ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:152: note: (near initialization for ‘test_graph_1_vals[5]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:173: error: initializer element is not constant
  191 |         static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
      |                                                                                                                                                                             ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:191:173: note: (near initialization for ‘test_graph_1_vals[6]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:47: error: initializer element is not constant
  202 |         static void* test_graph_2_vals[22] = {test_graph_2_vals_0, test_graph_2_vals_1, test_graph_2_vals_2, test_graph_2_vals_3, test_graph_2_vals_4, test_graph_2_vals_5};
      |                                               ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:47: note: (near initialization for ‘test_graph_2_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:68: error: initializer element is not constant
  202 |         static void* test_graph_2_vals[22] = {test_graph_2_vals_0, test_graph_2_vals_1, test_graph_2_vals_2, test_graph_2_vals_3, test_graph_2_vals_4, test_graph_2_vals_5};
      |                                                                    ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:68: note: (near initialization for ‘test_graph_2_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:89: error: initializer element is not constant
  202 |         static void* test_graph_2_vals[22] = {test_graph_2_vals_0, test_graph_2_vals_1, test_graph_2_vals_2, test_graph_2_vals_3, test_graph_2_vals_4, test_graph_2_vals_5};
      |                                                                                         ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:89: note: (near initialization for ‘test_graph_2_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:110: error: initializer element is not constant
  202 |         static void* test_graph_2_vals[22] = {test_graph_2_vals_0, test_graph_2_vals_1, test_graph_2_vals_2, test_graph_2_vals_3, test_graph_2_vals_4, test_graph_2_vals_5};
      |                                                                                                              ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:110: note: (near initialization for ‘test_graph_2_vals[3]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:131: error: initializer element is not constant
  202 |         static void* test_graph_2_vals[22] = {test_graph_2_vals_0, test_graph_2_vals_1, test_graph_2_vals_2, test_graph_2_vals_3, test_graph_2_vals_4, test_graph_2_vals_5};
      |                                                                                                                                   ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:131: note: (near initialization for ‘test_graph_2_vals[4]’)
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:152: error: initializer element is not constant
  202 |         static void* test_graph_2_vals[22] = {test_graph_2_vals_0, test_graph_2_vals_1, test_graph_2_vals_2, test_graph_2_vals_3, test_graph_2_vals_4, test_graph_2_vals_5};
      |                                                                                                                                                        ^~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/connected_components.c:202:152: note: (near initialization for ‘test_graph_2_vals[5]’)
