tests/algorithms/x/C/graphs/connected_components.c
// Generated by Mochi 0.10.32 on 2025-08-14 09:53 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t dfs_len;
size_t connected_components_len;
size_t *connected_components_lens;

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static char* str_list_list_int(long long **arr, size_t len, const size_t lens[]) {
    size_t cap = 2;
    for (size_t i = 0; i < len; i++) cap += lens[i] * 32 + 3;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char *inner = str_list_int(arr[i], lens[i]);
        size_t n = strlen(inner);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, inner, n);
        pos += n;
        free(inner);
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

typedef struct { int *keys; void **vals; size_t *lens; size_t len; size_t cap; } MapIL;

static void* map_get_il(const int keys[], void *vals[], const size_t lens[], size_t len, int key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t concat_len;
static long long* concat_long_long(long long *a, size_t a_len, const long long *b, size_t b_len) {
    long long *res = realloc(a, (a_len + b_len) * sizeof(long long));
    if (b_len > 0) memcpy(res + a_len, b, b_len * sizeof(long long));
    concat_len = a_len + b_len;
    return res;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * dfs(MapIL graph, long long vert, long long * visited, size_t visited_len);
long long * * connected_components(MapIL graph);
int main(void);

long long * dfs(MapIL graph, long long vert, long long * visited, size_t visited_len) {
    visited[(int)(vert)] = 1LL;
    long long *connected_verts = NULL;
    size_t connected_verts_len = 0;
    {
        long long* __tmp0 = map_get_il(graph_keys, graph_vals, graph_lens, graph_len, vert, NULL);
        size_t __tmp0_len = graph_lens[vert];
        for (size_t __i = 0; __i < __tmp0_len; __i++) {
            long long neighbour = __tmp0[__i];
            if (!(visited[(int)({long long _mochi_idx = neighbour; _mochi_idx < 0 ? visited_len + _mochi_idx : _mochi_idx;})])) {
                connected_verts = concat_long_long(connected_verts, connected_verts_len, dfs(graph, neighbour, visited, visited_len), dfs_len);
                connected_verts_len = concat_len;
            }
        }
    }
    {
        long long* __ret3 = concat(({long long *tmp = malloc(1 * sizeof(long long)); tmp[0] = vert; tmp;}), connected_verts);
        dfs_len = concat_len;
        return __ret3;
    }
}

long long * * connected_components(MapIL graph) {
    long long graph_size = graph_len;
    long long *visited = NULL;
    size_t visited_len = 0;
    for (int _ = 0LL; _ < graph_size; _++) {
        visited = list_append_long_long(visited, &visited_len, 0LL);
    }
    long long **components_list = NULL;
    size_t components_list_len = 0;
    size_t *components_list_lens = NULL;
    size_t components_list_lens_len = 0;
    for (int i = 0LL; i < graph_size; i++) {
        if (!(visited[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? visited_len + _mochi_idx : _mochi_idx;})])) {
            long long *component = dfs(graph, i, visited, visited_len);
            size_t component_len = dfs_len;
            components_list = list_append_intptr(components_list, &components_list_len, component);
            components_list_lens = list_append_szt(components_list_lens, &components_list_lens_len, component_len);
        }
    }
    return connected_components_lens = components_list_lens, connected_components_len = components_list_len, components_list;
}

int main(void) {
    {
        long long __start = _now();
        static int test_graph_1_keys[23] = {0LL, 1LL, 2LL, 3LL, 4LL, 5LL, 6LL};
        long long test_graph_1_vals_0[2] = {1LL, 2LL};
        long long test_graph_1_vals_1[2] = {0LL, 3LL};
        long long test_graph_1_vals_2[1] = {0LL};
        long long test_graph_1_vals_3[1] = {1LL};
        long long test_graph_1_vals_4[2] = {5LL, 6LL};
        long long test_graph_1_vals_5[2] = {4LL, 6LL};
        long long test_graph_1_vals_6[2] = {4LL, 5LL};
        static void* test_graph_1_vals[23] = {test_graph_1_vals_0, test_graph_1_vals_1, test_graph_1_vals_2, test_graph_1_vals_3, test_graph_1_vals_4, test_graph_1_vals_5, test_graph_1_vals_6};
        static size_t test_graph_1_lens[23] = {2, 2, 1, 1, 2, 2, 2};
        size_t test_graph_1_len = 7;
        MapIL test_graph_1 = { test_graph_1_keys, test_graph_1_vals, test_graph_1_lens, 7, 23 };
        static int test_graph_2_keys[22] = {0LL, 1LL, 2LL, 3LL, 4LL, 5LL};
        long long test_graph_2_vals_0[3] = {1LL, 2LL, 3LL};
        long long test_graph_2_vals_1[2] = {0LL, 3LL};
        long long test_graph_2_vals_2[1] = {0LL};
        long long test_graph_2_vals_3[2] = {0LL, 1LL};
        long long test_graph_2_vals_4[0] = {};
        long long test_graph_2_vals_5[0] = {};
        static void* test_graph_2_vals[22] = {test_graph_2_vals_0, test_graph_2_vals_1, test_graph_2_vals_2, test_graph_2_vals_3, test_graph_2_vals_4, test_graph_2_vals_5};
        static size_t test_graph_2_lens[22] = {3, 2, 1, 2, 0, 0};
        size_t test_graph_2_len = 6;
        MapIL test_graph_2 = { test_graph_2_keys, test_graph_2_vals, test_graph_2_lens, 6, 22 };
        puts(({long long **__tmp4 = connected_components(test_graph_1); char *__res = str_list_list_int(__tmp4, connected_components_len, connected_components_lens); __res;}));
        puts(({long long **__tmp5 = connected_components(test_graph_2); char *__res = str_list_list_int(__tmp5, connected_components_len, connected_components_lens); __res;}));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
